add dto for GetUserResponse
