# src/services/inventory/docs/swagger.json
@@ -235,10 +235,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entities.UserEntity"
-                        }
+                        "description": "OK"
                     },
                     "404": {
                         "description": "Not Found"
@@ -381,35 +378,6 @@
                     "type": "string"
                 },
                 "user": {
-                    "type": "string"
-                }
-            }
-        },
-        "entities.UserEntity": {
-            "type": "object",
-            "properties": {
-                "Broker": {
-                    "$ref": "#/definitions/entities.BrokerEntity"
-                },
-                "BrokerId": {
-                    "type": "integer"
-                },
-                "PasswordHash": {
-                    "type": "string"
-                },
-                "Username": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
